<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.YourReminder.PopupOverlay" />

        <EditText
            android:id="@+id/editTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_task"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editSubTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="2"
            android:gravity="top|left"
            android:hint="@string/text_subtask"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textpriority"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_priority" />

            <TextView
                android:id="@+id/textlvl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lvl" />
        </LinearLayout>


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDateandTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/text_date_and_time"
                android:textColorHint="#757575"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bdata"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/set_date"
                android:onClick="onButtonDate"/>

        </LinearLayout>

        <Button
            android:id="@+id/bSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:onClick="onButtonSave"/>

        <Button
            android:id="@+id/bDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:onClick="onButtonDelete"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>